test/files/neg/typed-xml-scala-processing-instruction-1.scala
class Test {
  def f1 = {
    <?scala {val s: String= 1; null}?>
  }

  def f2 = {
    <?scala {()}?>
  }
}
