test/files/neg/typed-xml-scala-processing-instruction-1.check
typed-xml-scala-processing-instruction-1.scala:3: error: type mismatch;
 found   : Int(1)
 required: String
    <?scala {val s: String= 1; null}?>
                            ^
typed-xml-scala-processing-instruction-1.scala:7: error: type mismatch;
 found   : Unit
 required: scala.xml.XMLUnmarshaller
    <?scala {()}?>
             ^
two errors found
